--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DISCORD_TOKEN=YOUR_DISCORD_TOKEN
 DISCORD_GUILD=YOUR_DISCORD_GUILD
 GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
+GEMINI_API_KEY=YOUR_GEMINI_API_KEY
