update some file for running easily

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ DISCORD_TOKEN=YOUR_DISCORD_TOKEN
 DISCORD_GUILD=YOUR_DISCORD_GUILD
 GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY
+
+# Dùng cho những người dùng nào muốn lấy tin tức từ trang Alpaca
+ALPACA_API_KEY="YOUR_ALPACA_API_KEY"
+ALPACA_API_SECRET="YOUR_ALPACA_API_SECRET"
